# AutoGraph_ConcentricCircles

./: AutoGraphSpiral_SpecDoc.md  README.md  main.py  map_bitmap_to_spiral.py  pyproject.toml  spiral.py  spiral_find_theta_from_length.py  test_spiral.py
data/: margaret gym_gray_spiral.gcode  recurse_center_cyborg.xcf  recurse_center_cyborg_gray_spiral.gcode
